<resources>
    <string name="app_name">PShop</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_home_lookup">Tìm kiếm sản phẩm</string>
    <string name="title_home_news">Tin tức - Khuyến mãi</string>
    <string name="title_home_order">Đơn hàng</string>
    <string name="title_home_product">Sản phẩm</string>
    <string name="title_home_qr">Scan</string>
    <string name="title_profile">Thông tin cá nhân</string>
    <string name="title_list_member">Danh sách thành viên</string>
    <string name="title_member_profile">Thông tin thành viên</string>
    <string name="title_policy_permis">Điều khoản sử dụng</string>
    <string name="title_question">Câu hỏi thường gặp</string>

    <string name="hint_list_customer_input">Vui lòng nhập tên hoặc số điện thoại</string>
    <string name="hint_lookup_input">Vui lòng nhập tên hoặc mã sản phẩm</string>

    <!-- login -->
    <string name="login_username_hint">Số điện thoại</string>
    <string name="login_password_hint">Mật khẩu</string>
    <string name="login_button">Đăng nhập</string>
    <string name="login_forgot_pass">Quên mật khẩu</string>
    <string name="login_call_center">Trung tâm hỗ trợ</string>
    <string name="login_term">Điều khoản sử dụng</string>
    <string name="message_username_empty">Bạn chưa nhập số điện thoại!</string>
    <string name="message_password_empty">Bạn chưa nhập mật khẩu!</string>
    <string name="message_login_failure">Đăng nhập không thành công! Xin hãy thử lại!</string>

    <!-- otp -->
    <string name="otp_hint">Mã số bí mật đã được gửi về Email hoặc số điện thoại của bạn. Vui lòng kiểm tra và nhập để tiếp tục</string>
    <string name="otp_button">Xác nhận</string>
    <string name="message_otp_empty">Bạn chưa nhập mã số!</string>
    <string name="message_otp_failure">Mã số không hợp lệ! Xin hãy thử lại!</string>

    <!-- forgot password -->
    <string name="forgot_pass_hint">Vui lòng nhập số điện thoại của bạn, hệ thống sẽ gửi\n yêu cầu mật khẩu mới về email của bạn</string>
    <string name="forgot_pass_username_hint">Số điện thoại</string>
    <string name="forgot_pass_button">Xác nhận</string>
    <string name="message_forgot_pass_failure">Yêu cầu không thành công! Xin hãy thử lại!</string>

    <!-- change password -->
    <string name="change_pass_new_pass">Mật khẩu mới</string>
    <string name="change_pass_confirm_pass">Nhập lại mật khẩu mới</string>
    <string name="change_pass_button">Đổi mật khẩu</string>
    <string name="message_pass_new_empty">Bạn chưa nhập mật khẩu mới!</string>
    <string name="message_pass_confirm_empty">Bạn chưa nhập lại mật khẩu mới!</string>
    <string name="message_pass_confirm_invalid">Xác nhận mật khẩu sai!</string>
    <string name="message_change_pass_success">Đổi mật khẩu thành công!</string>
    <string name="message_change_pass_failure">Đổi mật khẩu không thành công! Xin hãy thử lại!</string>
    <string name="action_change">Thay đổi</string>
    <string name="att_address_with_input">&lt;b>Đ/c: &lt;/b> %s</string>
    <string name="action_seller">&lt;b>Người bán:&lt;/b> %s</string>
    <string name="action_create_new_customer">Tạo khách hàng mới</string>
    <string name="title_profile_select">Chọn khách hàng</string>
    <string name="att_profile_register_full_name_required">Họ và tên (*)</string>
    <string name="att_profile_register_phone_required">Điện thoại (*)</string>
    <string name="att_profile_register_email">Email</string>
    <string name="att_profile_register_address">Địa chỉ</string>
    <string name="title_profile_register">Tạo khách hàng</string>
    <string name="action_add_to_cart">Thêm vào giỏ hàng</string>
    <string name="att_product_category">Danh mục sản phẩm</string>
    <string name="att_product_available_at">Đang sẵn hàng tại</string>
    <string name="att_product_describe">Mô tả sản phẩm</string>

    <!-- change password -->
    <string name="update_pass_old_pass">Mật khẩu cũ</string>
    <string name="update_pass_confirm_pass">Xác nhận mật khẩu mới</string>
    <string name="update_pass_old_pass_empty">Bạn chưa nhập mật khẩu cũ</string>
    <string name="update_pass_new_pass_empty">Bạn chưa nhập mật khẩu mới</string>
    <string name="update_pass_confirm_pass_empty">Bạn phải xác nhận mật khẩu mới</string>

    <!-- transition -->
    <string name="transition_list_product_to_product_detail">imgProduct</string>

    <!-- order list -->
    <string name="all_order_list">Tất cả</string>
    <string name="this_week_order_list">Tuần này</string>
    <string name="last_week">Tuần trước</string>
    <string name="this_month">Tháng này</string>
    <string name="find">Tìm kiếm</string>
    <string name="section_month_year">Tháng %s</string>
    <string name="quality_product_in_item">Số lượng: %s</string>
    <string name="time_create_in_item">Thời gian: %s</string>
    <string name="noti_when_choose_day_in_filter_false">Ngày kết thúc phải lớn hơn ngày bắt đầu</string>

    <!--order detail-->
    <string name="order_detail_title">Đơn hàng số #%s</string>

    <!-- product detail -->
    <string name="product_detail_title">Chi tiết sản phẩm</string>
    <string name="product_detail_code">Mã sản phẩm: %s</string>
    <string name="product_detail_price">%s VNĐ</string>

    <!-- currency unit -->
    <string name="currency_unit">%1s VNĐ</string>
    <string name="cart_item_price">Đơn giá: %s VNĐ</string>
    <string name="cart_item_total">Tổng: %s VNĐ</string>

    <!--profile fragment-->
    <string name="title_fragment_profile">Thông tin người dùng</string>
    <string name="order_profile_fragment">Đơn hàng</string>
    <string name="point_profile_fragment">Điểm tích lũy</string>
    <string name="custom_profile_fragment">Khách hàng</string>
    <string name="name_profile_fragment">Họ tên</string>
    <string name="phone_profile_fragment">Điện thoại</string>
    <string name="mail_profile_fragment">Email</string>
    <string name="address_profile_fragment">Địa chỉ</string>
    <string name="setting_profile_fragment">Cài đặt</string>
    <string name="time_profile_fragment">Thời gian:</string>
    <string name="value_time_profile_fragment">%1s - %2s</string>
    <string name="sales_expect_profile_fragment">Doanh số yêu cầu:</string>
    <string name="sales_actual_profile_fragment">Doanh số đã đạt:</string>
    <string name="value_sales_profile_fragment">%s VNĐ</string>
    <string name="manager_team_profile_fragment">Quản lý nhóm bán hàng</string>
    <string name="sales_member_profile_fragment">Doanh số thành viên trong nhóm</string>
    <string name="watch_order_list_profile_fragment">Xem danh sách đơn hàng</string>
    <string name="change_pass_profile_fragment">Đổi mật khẩu</string>
    <string name="questions_profile_fragment">Câu hỏi thường gặp</string>
    <string name="term_use_profile_fragment">Điều khoản sử dụng</string>
    <string name="log_out_profile_fragment">Đăng xuất</string>
    <string name="display_time_day_month_year_in_header_filter">%1s - %2s</string>
    <string name="sale">Doanh thu: %1$s VNĐ/ %2$s VNĐ</string>
    <string name="time_sale">Thời hạn: %1$s -> %2$s </string>

    <!--delivery info-->
    <string name="delivery_info_title">Thông tin giao hàng</string>
    <string name="delivery_info_name">Họ và tên(*)</string>
    <string name="delivery_info_phone">Số điện thoại(*)</string>
    <string name="delivery_info_address">Địa chỉ</string>
    <string name="delivery_info_date">Thời gian nhận hàng</string>
    <string name="delivery_info_note">Ghi chú</string>
    <string name="delivery_info_submit">Xác nhận</string>
    <string name="delivery_info_invalid_date">Ngày nhận hàng phải sau ít nhất 2 ngày</string>
    <string name="delivery_info_name_empty">Bạn chưa nhập họ và tên!</string>
    <string name="delivery_info_phone_empty">Bạn chưa nhập số điện thoại!</string>
    <string name="delivery_info_submit_fail">Cập nhật không thành công! Xin hãy thử lại!</string>

    <!-- notification -->
    <string name="notification_title">Thông báo</string>

    <!-- time -->
    <string name="just_now">Vừa xong</string>
    <string name="some_seconds_ago">%s giây trước</string>
    <string name="one_minute_ago">1 phút trước</string>
    <string name="some_minute_ago">%s phút trước</string>
    <string name="one_hour_ago">1 giờ trước</string>
    <string name="some_hour_ago">%s giờ trước</string>
    <string name="phone_with_format">Phone: %1s</string>
    <string name="email_with_format">Email: %1s</string>
    <string name="anddress_with_format">Địa chỉ: %1s</string>
    <string name="not_found_user">Không tìm thấy user</string>
    <string name="lookup_price_format">Đơn giá: %1s VNĐ</string>
    <string name="action_select_customer">Chọn KH</string>
    <string name="cart_please_select_customer">Hãy chọn khách hàng</string>
    <string name="cart_date_sell">&lt;b>Ngày bán&lt;/b>: %1s </string>
    <string name="cart_person_sell">&lt;b>Người bán&lt;/b>: %1s </string>
    <string name="cart_address_customer">&lt;b>Đ/c&lt;/b>: %1s </string>
    <string name="title_cart_detail">Giỏ hàng</string>
    <string name="delivery_info_phone_incorrect">Số điện thoại không hợp lệ</string>
    <string name="err_msg_cart_empty">Phải có ít nhất một sản phẩm trong giỏ hàng</string>
    <string name="err_msg_transaction_no_customer">Thông tin khách hàng không được để trống</string>
    <string name="err_msg_transaction_no_creator">Thông tin người bán/đặt hàng không được để trống</string>
    <string name="err_msg_transaction_no_login">Bạn phải đăng nhập để thực hiện thao tác này</string>

    <string name="cart_singale_item_total_price">Tổng: %1s VNĐ</string>
    <string name="msg_cornfirm_delete">Bạn thật sự muốn làm trống giỏ hàng?</string>
    <string name="action_confirm">Đồng ý</string>
    <string name="action_cancel">Hủy</string>
    <string name="action_delete">Xóa</string>
    <string name="no_result">Không có kết quả phù hợp</string>
    <string name="scan_qr_success">Thêm 1 sản phẩm vào giỏ hàng</string>
    <string name="scan_qr_not_find_product">Không tìm thấy sản phẩm này</string>
    <string name="scan_qr_failure">Không lấy được dữ liệu từ server</string>
    <string name="scan_title_product">Mã sản phẩm: %s</string>
    <string name="stock_phone_and_distance">ĐT: %1s - Khoảng cách %2s%3s</string>
    <string name="stock_phone_only">ĐT: %1s</string>
    <string name="create_customer_pass">Mật khẩu của khách hàng là %1s.</string>
    <string name="backpress_two_times">Nhấn thoát hai lần để thoát ứng dụng</string>
    <string name="msg_select_image_from_gallery">Xin chọn nguồn ảnh</string>
    <string name="purchase_fail">Thanh toán không thành công</string>
    <string name="message_newpass_too_short">Mật khẩu ít nhất phải 6 kí tự</string>
    <string name="msg_cornfirm_logout">Bạn thực sự muốn đăng xuất?</string>
    <string name="msg_cornfirm_cancel_edit">Toàn bộ chỉnh sửa chưa được lưu, vẫn muốn thoát?</string>
    <string name="confirm_logout">Bạn chắc chắn muốn đăng xuất?</string>
    <string name="not_have_expect">Chưa đặt doanh số</string>
    <string name="msg_notification_no_login">Vui lòng đăng nhập để xem thông báo</string>
    <string name="sales_expect_is_zero_profile_fragment">Chưa đặt doanh số</string>
</resources>
