<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_product"
        android:icon="@drawable/ic_product_list_unselected"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_order_list_unselected"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_qr"
        android:icon="@drawable/ic_scan_qr_unselected"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_lookup"
        android:icon="@drawable/ic_lookup_unselected"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news_unselected"
        android:title="@string/title_notifications" />
</menu>
