<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/imv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/margin_normal"
        android:background="@drawable/ic_close"
        android:padding="@dimen/padding_big"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:background="@drawable/bg_white_border_rounded"
            android:fontFamily="@font/nunito_bold"
            android:hint="@string/login_username_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingBottom="@dimen/padding_normal"
            android:paddingLeft="@dimen/padding_big"
            android:paddingRight="@dimen/padding_big"
            android:paddingTop="@dimen/padding_normal"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="italic"/>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@drawable/bg_white_border_rounded"
            android:fontFamily="@font/nunito_bold"
            android:hint="@string/login_password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="@dimen/padding_normal"
            android:paddingLeft="@dimen/padding_big"
            android:paddingRight="@dimen/padding_big"
            android:paddingTop="@dimen/padding_normal"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="italic"/>

        <View
            android:layout_width="@dimen/login_divider_width"
            android:layout_height="@dimen/login_divider_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@android:color/white"/>

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_normal"
            android:background="@drawable/bg_primary_button"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_normal"
            android:paddingLeft="@dimen/padding_big"
            android:paddingRight="@dimen/padding_big"
            android:paddingTop="@dimen/padding_normal"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_normal"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/view_center"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/login_forgot_pass"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_normal"/>

            <View
                android:id="@+id/view_center"
                android:layout_width="60dp"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tv_call_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/view_center"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/login_call_center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_normal"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/login_term"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_normal"/>

        <View
            android:layout_width="@dimen/login_divider_width"
            android:layout_height="@dimen/login_divider_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"/>
    </LinearLayout>

</RelativeLayout>