<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/layout_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login"/>

    <ImageView
        android:id="@+id/imv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/margin_normal"
        android:background="@drawable/ic_close"
        android:padding="@dimen/padding_big"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/forgot_pass_hint"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_normal"/>

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_normal"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_white_border_rounded"
            android:hint="@string/forgot_pass_username_hint"
            android:inputType="text"
            android:maxLines="1"
            android:paddingBottom="@dimen/padding_normal"
            android:paddingLeft="@dimen/padding_big"
            android:paddingRight="@dimen/padding_big"
            android:paddingTop="@dimen/padding_normal"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="italic|bold"/>

        <View
            android:layout_width="@dimen/login_divider_width"
            android:layout_height="@dimen/login_divider_height"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white"/>

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_normal"
            android:background="@drawable/bg_primary_button"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_normal"
            android:paddingLeft="@dimen/padding_big"
            android:paddingRight="@dimen/padding_big"
            android:paddingTop="@dimen/padding_normal"
            android:text="@string/otp_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_normal"/>

    </LinearLayout>

</RelativeLayout>
