<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin_small"
                android:src="@drawable/ic_back" />
        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/card_radius_normal"
            app:cardElevation="5dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_big">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/update_pass_old_pass"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:background="@drawable/bg_edittext_rounded_normal"
                    android:inputType="text"
                    android:padding="@dimen/padding_normal"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/change_pass_new_pass"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:background="@drawable/bg_edittext_rounded_normal"
                    android:inputType="text"
                    android:padding="@dimen/padding_normal"
                    android:textSize="@dimen/text_size_normal" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/update_pass_confirm_pass"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:background="@drawable/bg_edittext_rounded_normal"
                    android:inputType="text"
                    android:padding="@dimen/padding_normal"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_primary_button_no_rounded"
        android:gravity="center"
        android:padding="@dimen/padding_normal"
        android:text="@string/change_pass_button"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold" />

</RelativeLayout>